@@ -1,0 +1,20 @@
+#ifndef SEEN_EXTRACT_URI_H
+#define SEEN_EXTRACT_URI_H
+
+#include <glib/gtypes.h>
+
+gchar *extract_uri(gchar const *s);
+
+
+#endif /* !SEEN_EXTRACT_URI_H */
+
+/*
+  Local Variables:
+  mode:c++
+  c-file-style:"stroustrup"
+  c-file-offsets:((innamespace . 0)(inline-open . 0))
+  indent-tabs-mode:nil
+  fill-column:99
+  End:
+*/
+// vim: filetype=c++:expandtab:shiftwidth=4:tabstop=8:softtabstop=4 :
